@@ -1,3 +1,5 @@
+require 'cerberus/builder/ruby_base'
+
 class Cerberus::Builder::Rake < Cerberus::Builder::RubyBase
   def initialize(config)
     super(config, "rake")
