@@ -1,3 +1,4 @@
+require 'rubygems'
 require 'action_mailer'
 require 'cerberus/publisher/base'
 
