@@ -1,5 +1,9 @@
 = Cerberus Changelog
 
+== SVN
+
+* Use lazy loading of cerberus components (publishers, vcs, builder)
+
 == Version 0.3.0
 Fix release
 
